# ai-rag-eval-logistics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: corpus.jsonl
data/eval/: questions.jsonl
src/rag_eval/app/: eval.py
src/rag_eval/core/: judge_generation.py  judge_retrieval.py  reporting.py
tests/: test_smoke_eval.py
